addons/frontend/src/typst.css
body {
  background-color: #fff;
}

#typst-app {
  margin: 0;
  transform-origin: 0 0;
  background-color: #fff;
}

.typst-text {
  pointer-events: bounding-box;
}

.tsel span,
.tsel {
  position: fixed;
  text-align: justify;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  text-align-last: justify;
  color: transparent;
}

.tsel span::-moz-selection,
.tsel::-moz-selection {
  color: transpaent;
  background: #7db9dea0;
}

.tsel span::selection,
.tsel::selection {
  color: transpaent;
  background: #7db9dea0;
}

svg {
  --glyph_fill: black;
}

.pseudo-link {
  fill: transparent;
  cursor: pointer;
  pointer-events: all;
}

.image_glyph image,
.outline_glyph path {
  transform: matrix(1, 0, 0, 1, var(--o), 0);
}

.outline_glyph path {
  fill: var(--glyph_fill);
}

.hover .typst-text {
  --glyph_fill: #66bab7;
}

.typst-text:hover {
  --glyph_fill: #f75c2f;
}

.typst-jump-ripple,
.typst-debug-react-ripple {
  width: 0;
  height: 0;
  background-color: transparent;
  position: absolute;
  border-radius: 50%;
}

.typst-jump-ripple {
  border: 2px solid #66bab7;
}

.typst-debug-react-ripple {
  border: 1px solid #cb1b45;
}

@keyframes typst-jump-ripple-effect {
  to {
    width: 10vw;
    height: 10vw;
    opacity: 0.01;
    margin: -5vw;
  }
}

@keyframes typst-debug-react-ripple-effect {
  to {
    width: 3vw;
    height: 3vw;
    opacity: 0.1;
    margin: -1.5vw;
  }
}

